<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/pageLayout"
    tools:context=".SignUp.View.Signup">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_140sdp"
        android:background="@drawable/splash"
        >
        <TextView
            android:id="@+id/SinUpSkip"
            style="@style/skipStyle"
            android:text="@string/Skip"
            />
        <ImageView
            android:layout_width="81dp"
            android:layout_height="@dimen/_70sdp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:padding="@dimen/_10sdp"
            android:src="@drawable/logo"
            android:layout_gravity="center_vertical|center_horizontal"
            />
    </FrameLayout>
    <TextView
        android:text="@string/newAcount"
        style="@style/viewTextStyle"
        android:padding="@dimen/_1sdp"
        android:textSize="@dimen/_18sdp"/>
    <TextView
        style="@style/viewTextStyle"
        android:text="@string/EnterEmail"
        />
    <EditText
        android:id="@+id/SinUpName"
        style="@style/BoxStyle"
        android:hint="@string/userName"
        android:drawableStart="@drawable/ic_person"
        android:inputType="text"
        />
    <EditText
        android:id="@+id/SinUpEmail"
        style="@style/BoxStyle"
        android:hint="@string/email"
        android:drawableStart="@drawable/ic_email"
        android:inputType="textEmailAddress"
        />
    <EditText
        android:id="@+id/SinUpPassword"
        style="@style/BoxStyle"
        android:hint="@string/password"
        android:drawableStart="@drawable/ic_lock"
        android:inputType="textPassword"
        android:gravity="right"
        />
    <EditText
        android:id="@+id/SinUpConfirmPassword"
        style="@style/BoxStyle"
        android:hint="@string/reepetpassword"
        android:drawableStart="@drawable/ic_lock"
        android:inputType="textPassword"
        android:gravity="right"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginStart="@dimen/_5sdp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_phone"
            android:gravity="start"
            android:layout_gravity="center"
            />
        <com.hbb20.CountryCodePicker
            android:id="@+id/SinUpCCP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="start"
            app:ccp_showFlag="false"
            app:ccp_showNameCode="false"
            app:ccp_contentColor="@color/gray"
            android:layout_gravity="center"
            />
        <EditText
            android:id="@+id/SinUpPhoneNumber"
            style="@style/BoxStyle"
            android:hint="@string/phoneNumber"
            android:inputType="phone"
            android:gravity="right"
            android:background="@null"
            android:textColorHint="@color/gray"
            android:fontFamily="@font/sf_regular"
            />
    </LinearLayout>
    <View
        style="@style/UnderLine"
        />
    <TextView
        android:id="@+id/SinUpHaveAccount"
        android:text="@string/havAcount"
        android:gravity="right"
        style="@style/forgatpassAndNewAcountLayout"
        android:textAlignment="center"
        android:layout_marginEnd="@dimen/_40sdp"
        android:layout_marginTop="@dimen/_10sdp" />
    <Button
        android:id="@+id/SinUpBu"
        style="@style/ButtonStyle"
        android:text="@string/SinUp"
        android:layout_marginTop="@dimen/_15sdp"/>
</LinearLayout>