<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/pageLayout"
    android:background="@drawable/shaip"
    tools:context=".LogIn.View.LogIn">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_250sdp"
        android:background="@drawable/splash">

        <TextView
            android:id="@+id/loginSkip"
            style="@style/skipStyle"
            android:text="@string/Skip" />

        <ImageView
            android:layout_width="81dp"
            android:layout_height="@dimen/_70sdp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center_vertical|center_horizontal"
            android:padding="@dimen/_5sdp"
            android:src="@drawable/logo" />
    </FrameLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:fontFamily="@font/ge_ss_medium"
        android:text="@string/LogIn"
        android:textAlignment="center"
        android:textColor="@color/gray"
        android:textSize="@dimen/_15sdp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_1sdp"
        android:fontFamily="@font/ge_ss_light"
        android:padding="@dimen/_10sdp"
        android:text="@string/EnterEmail"
        android:textAlignment="center"
        android:textColor="@color/gray"
        android:textSize="@dimen/_13sdp"
        android:typeface="normal" />

    <EditText
        android:id="@+id/logInEmail"
        style="@style/BoxStyle"
        android:drawableStart="@drawable/ic_email"
        android:hint="@string/email"
        android:imeOptions="actionNext"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/logInPass"
        style="@style/BoxStyle"
        android:drawableStart="@drawable/ic_lock"
        android:gravity="right"
        android:hint="@string/password"
        android:imeOptions="actionDone"
        android:inputType="textPassword" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/logInNewUser"
            style="@style/forgatpassAndNewAcountLayout"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_weight="1"
            android:gravity="start"
            android:text="@string/newAcount" />

        <TextView
            android:id="@+id/logInForgetPass"
            style="@style/forgatpassAndNewAcountLayout"
            android:layout_marginEnd="@dimen/_25sdp"
            android:layout_weight="1"
            android:gravity="end"
            android:text="@string/forgetPassword" />
    </LinearLayout>

    <Button
        android:id="@+id/logInBu"
        style="@style/ButtonStyle"
        android:text="@string/logIn" />
</LinearLayout>
