<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/pageLayout"
    tools:context=".LawyerContents.View.ContactLawyer">

    <androidx.appcompat.widget.Toolbar style="@style/toolBar">

        <FrameLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layoutDirection="rtl"
            android:textDirection="rtl">

            <TextView
                android:id="@+id/content_Lawyer_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_25sdp"
                android:drawableStart="@drawable/ic_forward_black_24dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/ge_ss_light"
                android:text="@string/ContactLawyer"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="@dimen/_17sdp" />
        </FrameLayout>
    </androidx.appcompat.widget.Toolbar>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_70sdp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_50sdp"
        android:padding="@dimen/_5sdp"
        android:src="@drawable/redlogo" />

    <TextView
        style="@style/viewTextStyle"
        android:text="@string/ContactSon" />

    <EditText
        style="@style/BoxStyle"
        android:hint="@string/name"
        android:inputType="text" />

    <EditText
        style="@style/BoxStyle"
        android:hint="@string/emailElc"
        android:inputType="textEmailAddress" />

    <EditText
        style="@style/BoxStyle"
        android:hint="@string/complaint"
        android:inputType="textMultiLine" />

    <Button
        style="@style/ButtonStyle"
        android:layout_marginTop="@dimen/_50sdp"
        android:text="@string/send" />
</LinearLayout>