<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/pageLayout"
    tools:context=".ProfilePage.view.ChangePassActivity">
    <androidx.appcompat.widget.Toolbar
        style="@style/toolBar">
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textDirection="rtl"
            android:layoutDirection="rtl"
            >
            <TextView
                style="@style/ToolBarTextStyle"
                android:text="@string/change_pass"
                />
            <TextView
                android:id="@+id/forgepassback"
                style="@style/BackShape"
                />
        </FrameLayout>
    </androidx.appcompat.widget.Toolbar>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_90sdp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:padding="@dimen/_5sdp"
        android:src="@drawable/redlogo"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_50sdp"
        />


    <EditText
        android:id="@+id/newPassOld"
        style="@style/BoxStyle"
        android:drawableStart="@drawable/ic_lock"
        android:gravity="right"
        android:hint="@string/old_pass"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/newPassNew"
        style="@style/BoxStyle"
        android:drawableStart="@drawable/ic_lock"
        android:gravity="right"
        android:hint="@string/new_pass"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/newPassReepet"
        style="@style/BoxStyle"
        android:drawableStart="@drawable/ic_lock"
        android:gravity="right"
        android:hint="@string/reepetpassword"
        android:inputType="textPassword" />
    <Button
        android:id="@+id/forgetPassBu"
        style="@style/ButtonStyle"
        android:text="@string/ok"
        android:layout_marginTop="@dimen/_50sdp"
        />



</LinearLayout>