<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/pageLayout"
    tools:context=".ProfilePage.View.NewPassword">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_70sdp"
        android:background="@color/dark_red"
        android:textDirection="rtl"
        android:layoutDirection="rtl"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Changepass"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:fontFamily="@font/ge_ss_light"
            android:textSize="@dimen/_25sdp"
            android:layout_gravity="center_vertical|center_horizontal"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_forward_black_24dp"
            android:layout_marginTop="@dimen/_25sdp"
            />
    </FrameLayout>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_90sdp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:padding="@dimen/_5sdp"
        android:src="@drawable/redlogo"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_50sdp"
        />
    <EditText
        style="@style/BoxStyle"
        android:hint="@string/oldPass"
        android:inputType="textPassword"
        android:gravity="right"
        android:paddingStart="@dimen/_10sdp"
        />
    <EditText
        style="@style/BoxStyle"
        android:hint="@string/newPass"
        android:inputType="textPassword"
        android:gravity="right"
        android:paddingStart="@dimen/_10sdp"
        />
    <EditText
        style="@style/BoxStyle"
        android:hint="@string/ConfirmNewPass"
        android:inputType="textPassword"
        android:gravity="right"
        android:paddingStart="@dimen/_10sdp"
        />
    <Button
        style="@style/ButtonStyle"
        android:text="@string/OK"
        android:layout_marginTop="@dimen/_40sdp"/>

</LinearLayout>