<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/pageLayout"
    tools:context=".LogIn.View.ForgetPassword">
    <androidx.appcompat.widget.Toolbar
        style="@style/toolBar">
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textDirection="rtl"
            android:layoutDirection="rtl"
            >
            <TextView
                style="@style/ToolBarTextStyle"
                android:text="@string/forgetpass"
                />
            <TextView
                android:id="@+id/forgepassback"
                style="@style/BackShape"
                />
        </FrameLayout>
    </androidx.appcompat.widget.Toolbar>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_90sdp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:padding="@dimen/_5sdp"
        android:src="@drawable/redlogo"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_50sdp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enterYourEmail"
        android:layout_gravity="start"
        android:layout_marginStart="@dimen/_15sdp"
        android:textSize="@dimen/_18sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:padding="@dimen/_5sdp"/>
    <EditText
        android:id="@+id/forgetPassEmail"
        style="@style/BoxStyle"
        android:hint="@string/emailExample"
        android:inputType="textEmailAddress"
        android:background="@null"
        android:layout_marginTop="@dimen/_5sdp"
        android:paddingTop="@dimen/_5sdp"
        android:paddingEnd="@dimen/_5sdp"
        />
    <Button
        style="@style/ButtonStyle"
        android:text="@string/send"
        android:layout_marginTop="@dimen/_50sdp"
        />
</LinearLayout>