<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/pageLayout"
    tools:context=".ProfilePage.view.EditeProfile">
    <androidx.appcompat.widget.Toolbar
        style="@style/toolBar"
        >
        <FrameLayout
            style="@style/TollBarFrameStyle"
            >
            <TextView
                android:id="@+id/edie_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_forward_black_24dp"
                android:layout_marginTop="@dimen/_25sdp"
                />
            <TextView
                style="@style/ToolBarTextStyle"
                android:text="@string/EditeProfile"
                android:layout_marginStart="@dimen/_15sdp"
                />
        </FrameLayout>
    </androidx.appcompat.widget.Toolbar>
    <EditText
        android:id="@+id/editeProfileName"
        style="@style/BoxStyle"
        android:hint="@string/userName"
        android:drawableStart="@drawable/ic_person"
        android:text="محمد وليد "
        android:inputType="text"
        android:paddingBottom="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_15sdp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginStart="@dimen/_5sdp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_phone"
            android:gravity="start"
            android:layout_gravity="center"
            />
        <com.hbb20.CountryCodePicker
            android:id="@+id/editeCCP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="start"
            app:ccp_contentColor="@color/gray"
            app:ccp_showFlag="false"
            app:ccp_autoDetectCountry="true"
            app:ccp_showNameCode="false" />
        <EditText
            android:id="@+id/editeProfilePhoneNumber"
            style="@style/BoxStyle"
            android:hint="@string/phoneNumber"
            android:inputType="phone"
            android:gravity="right"
            android:background="@null"
            android:textColorHint="@color/gray"
            android:maxLength="9"
            android:fontFamily="@font/sf_regular"
            />
    </LinearLayout>
    <View
        android:layout_marginTop="@dimen/_10sdp"
        style="@style/UnderLine"
        />
    <Button
        android:id="@+id/editeProfileBu"
        style="@style/ButtonStyle"
        android:text="@string/Save"
        android:layout_marginTop="@dimen/_130sdp"/>
</LinearLayout>